<resources>
    <string name="app_name">TrafficBuddy</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="traffic_buddy">Traffic Buddy</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My profile</string>
    <string name="save">Save</string>
    <string name="rank">Rank</string>
    <string name="rank_points">Rank points</string>
    <string name="rank_list">Rank list</string>

    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="add_report">Add report</string>
    <string name="my_reports">My reports</string>
    <string name="reports">Reports</string>
    <string name="report_details">Report details</string>
    <string name="traffic_notification_channel_name">Traffic notification channel</string>
    <string name="traffic_notification_channel_description">Channel for notifications related to location</string>
    <string name="date_time_added">Date/time added</string>
    <string name="username">Username</string>

</resources>