<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundAddReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/add_report_bck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_add_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Add report"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/backgroundAddReport"
        app:layout_constraintStart_toStartOf="@id/backgroundAddReport"
        app:layout_constraintTop_toTopOf="@id/backgroundAddReport" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_report_image_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/title_add_report"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        tools:listitem="@layout/rv_item_report_image" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@id/edit_text_description"
        android:minHeight="30dp"
        android:gravity="center"
        android:hint="@string/title"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_title"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@id/edit_text_lat"
        android:gravity="center"
        android:minHeight="65dp"
        android:hint="@string/description"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_text_lat"
        android:layout_width="0dp"
        android:minHeight="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_description"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/edit_text_lon"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_report"
        android:gravity="center"
        android:hint="@string/lat"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginRight="5dp" />

    <EditText
        android:id="@+id/edit_text_lon"
        android:minHeight="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/lon"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_report"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/edit_text_lat"
        app:layout_constraintTop_toBottomOf="@id/edit_text_description" />

    <Button
        android:id="@+id/btn_add_report"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/orange_button"
        android:text="@string/add_report"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edit_text_lat"
        app:layout_constraintStart_toStartOf="@id/backgroundAddReport"
        app:layout_constraintEnd_toEndOf="@id/backgroundAddReport"
        app:layout_constraintBottom_toBottomOf="@id/backgroundAddReport"
/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />


</androidx.constraintlayout.widget.ConstraintLayout>