<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/default_background" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="cursive"
        android:text="@string/my_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/image_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/image_edit"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/name_bck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_15" />


    <Button
        android:id="@+id/name_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        android:background="@drawable/background_button"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <ImageView
        android:id="@+id/account_icon"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="@id/name_bck"
        app:layout_constraintTop_toTopOf="@id/name_bck"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/name_bck"/>

    <EditText
        android:id="@+id/edit_name"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/name"
        android:textSize="15sp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_bck"
        app:layout_constraintEnd_toEndOf="@+id/name_bck"
        app:layout_constraintStart_toEndOf="@+id/account_icon"
        app:layout_constraintTop_toTopOf="@id/name_bck"/>

    <Button
        android:id="@+id/last_name_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:background="@drawable/background_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_bck" />

    <ImageView
        android:id="@+id/account_icon2"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="@id/last_name_bck"
        app:layout_constraintTop_toTopOf="@id/last_name_bck"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/last_name_bck"/>

    <EditText
        android:id="@+id/edit_last_name"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/last_name"
        android:textSize="15sp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/last_name_bck"
        app:layout_constraintEnd_toEndOf="@+id/last_name_bck"
        app:layout_constraintStart_toEndOf="@+id/account_icon2"
        app:layout_constraintTop_toTopOf="@id/last_name_bck"/>


    <Button
        android:id="@+id/email_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        android:background="@drawable/background_button"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_bck" />

    <ImageView
        android:id="@+id/account_email"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_username_24"
        app:layout_constraintStart_toStartOf="@id/email_bck"
        app:layout_constraintTop_toTopOf="@id/email_bck"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/email_bck"/>

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/email_bck"
        app:layout_constraintEnd_toEndOf="@+id/email_bck"
        app:layout_constraintStart_toEndOf="@+id/account_icon2"
        app:layout_constraintTop_toTopOf="@id/email_bck" />


    <Button
        android:id="@+id/rank_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:clickable="false"
        android:background="@drawable/background_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/email_bck" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_view_list_24"
        app:layout_constraintBottom_toBottomOf="@+id/rank_bck"
        app:layout_constraintStart_toStartOf="@id/rank_bck"
        app:layout_constraintTop_toTopOf="@id/rank_bck" />

    <EditText
        android:id="@+id/edit_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:hint="@string/rank_points"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/rank_bck"
        app:layout_constraintEnd_toEndOf="@+id/rank_bck"
        app:layout_constraintStart_toEndOf="@+id/password_icon"
        app:layout_constraintTop_toTopOf="@id/rank_bck" />

    <Button
        android:id="@+id/phone_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:clickable="false"
        android:background="@drawable/background_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rank_bck" />

    <ImageView
        android:padding="10dp"
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_phone_24"
        app:layout_constraintStart_toStartOf="@id/phone_bck"
        app:layout_constraintTop_toTopOf="@id/phone_bck"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/phone_bck"/>

    <EditText
        android:id="@+id/edit_phone"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/phone"
        android:textSize="15sp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/phone_bck"
        app:layout_constraintEnd_toEndOf="@+id/phone_bck"
        app:layout_constraintStart_toEndOf="@+id/phone_icon"
        app:layout_constraintTop_toTopOf="@id/phone_bck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>