<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_40"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:text="@string/my_profile"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/header_dim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/image_edit"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:text="\@sanja"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/header_dim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_edit"/>



    <Button
        android:id="@+id/email_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        android:background="@drawable/background_button"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_40" />

    <ImageView
        android:id="@+id/account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintBottom_toBottomOf="@id/email_bck"
        app:layout_constraintStart_toStartOf="@id/email_bck"
        app:layout_constraintTop_toTopOf="@id/email_bck" />

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/email_bck"
        app:layout_constraintEnd_toEndOf="@+id/email_bck"
        app:layout_constraintStart_toEndOf="@id/account_email"
        app:layout_constraintTop_toTopOf="@id/email_bck" />

    <Button
        android:id="@+id/rank_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        android:background="@drawable/background_button"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_bck" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_view_list_24"
        app:layout_constraintBottom_toBottomOf="@+id/rank_bck"
        app:layout_constraintStart_toStartOf="@id/rank_bck"
        app:layout_constraintTop_toTopOf="@id/rank_bck" />

    <EditText
        android:id="@+id/edit_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:hint="@string/rank_points"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/rank_bck"
        app:layout_constraintEnd_toEndOf="@+id/rank_bck"
        app:layout_constraintStart_toEndOf="@+id/password_icon"
        app:layout_constraintTop_toTopOf="@id/rank_bck" />

    <Button
        android:id="@+id/phone_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        android:background="@drawable/background_button"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank_bck" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_phone_24"
        app:layout_constraintBottom_toBottomOf="@id/phone_bck"
        app:layout_constraintStart_toStartOf="@id/phone_bck"
        app:layout_constraintTop_toTopOf="@id/phone_bck" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:hint="@string/phone"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/phone_bck"
        app:layout_constraintEnd_toEndOf="@+id/phone_bck"
        app:layout_constraintStart_toEndOf="@+id/phone_icon"
        app:layout_constraintTop_toTopOf="@id/phone_bck" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

</androidx.constraintlayout.widget.ConstraintLayout>